Created a model of player settings and realized serialization/deserialization to .json file with some options

--- a/MPTray/MPTray.csproj
+++ b/MPTray/MPTray.csproj
@@ -12,10 +12,11 @@
     <WinUISDKReferences>false</WinUISDKReferences>
     <EnableMsixTooling>true</EnableMsixTooling>
     <Nullable>enable</Nullable>
+    <WindowsPackageType>None</WindowsPackageType>
+    <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
   </PropertyGroup>
   <ItemGroup>
     <Content Remove="Assets\Icons.xaml" />
-    <Content Remove="Assets\Win11Pause.svg" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Assets\Icons.xaml" />
@@ -52,9 +53,6 @@
     <PackageReference Include="H.NotifyIcon.WinUI" Version="2.4.1" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.260101001" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="3.0.1" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Page Update="Assets\Icons.xaml">
